# btf_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  catalog.py  models.py  parser.py  pricing.py  ui.py
src/btf/: __init__.py  __main__.py  catalog.py  models.py  parser.py  pricing.py  ui.py
src/tests/: test_parse_input.py  test_reduction_rate.py  test_scenario.py
tests/: __init__.py  test_parser.py  test_pricing_reduction.py  test_pricing_total.py
