[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btf"
version = "0.1.0"
description = "Back to the Future DVD pricing kata — pricing engine, tests, and Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BTF Project" }]
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.32,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
btf = "btf.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=btf",
    "--cov-report=term-missing",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["btf"]
omit = [
    "src/btf/ui.py",        # Streamlit UI is exercised manually, not unit-tested
    "src/btf/__main__.py",  # CLI demo entry point
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are fine in tests

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/btf"]
exclude = ["src/btf/ui.py"]
